fixed horizontal scrollbar (shouldn't be present)

--- a/gitlab_github_theme.css
+++ b/gitlab_github_theme.css
@@ -98,6 +98,7 @@
     .page-title .creator {
         position: relative;
         display: block;
+        width: 80%;
         left: 31px;
         font-size: 0px;
     }
